--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Device</title>
+     <link rel="stylesheet" href="css/normalize.css">
+     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header"> 
-		<a class="header-logo" href="index.html">
-          <img src="img/index-logo.svg" width="10" height="10" alt="DEVICE">
-        </a>                       
+		<a class="header-logo" href="index.html">DEVICE</a>                       
 		
 		<nav class="main-navigation">
 		<div class="user-navigation-header">                
@@ -27,7 +27,7 @@
 		
 		
 			<ul class="site-navigation">
-				<li><a href="#catalog.html">Каталог товаров</a>
+				<li><a href="catalog.html">Каталог товаров</a>
 					<ul class="catalog-list">
 						<li><a href="#">Виртуальная реальность</a></li>
 						<li><a href="#">Фитнес браслеты</a></li>
@@ -129,7 +129,7 @@
 			
 			<div class="product">
 				<a href="products/selfie_stick111.html">
-					<img src="products/selfie_stick111.png" alt="Любительская селфи-палка">
+					<img src="img/products/selfie_stick111.png" alt="Любительская селфи-палка">
 				</a>
 				<table>
 					<tr>
@@ -141,7 +141,7 @@
 			
 			<div class="product">
 				<a href="products/selfie_stick222.html">
-					<img src="products/selfie_stick222.png" alt="Профессиональная селфи-палка">
+					<img src="img/products/selfie_stick222.png" alt="Профессиональная селфи-палка">
 				</a>
 				<table>
 					<tr>
@@ -153,7 +153,7 @@
 			
 			<div class="product">
 				<a href="products/selfie_stick333.html">
-					<img src="products/selfie_stick333.png" alt="Непотопляемая селфи-палка">
+					<img src="img/products/selfie_stick333.png" alt="Непотопляемая селфи-палка">
 				</a>
 				<table>
 					<tr>
@@ -165,7 +165,7 @@
 			
 			<div class="product">
 				<a href="products/selfie_stick444.html">
-					<img src="products/selfie_stick444.png" alt="Селфи-палка &#34Следуй за мной&#34">
+					<img src="img/products/selfie_stick444.png" alt="Селфи-палка &#34Следуй за мной&#34">
 				</a>
 				<table>
 					<tr>
@@ -198,7 +198,7 @@
 		<p class="text-footer">г.Москва ул. Строителей, 15</p>
 		<p class="text-footer">Тел.: +7(495)495-95-95</p>
 		
-		<nav class="user-navigation-footer">                
+		<nav class="navigation-footer">                
 			<label for="login-footer"><image src="img/login.svg" width="10" height="10"></label> 	
 				<button id="login-footer">Войти</button>
 					
@@ -223,7 +223,7 @@
 	</footer>
 	
   </body>
-</html>	
+</html>
 		
 		
 		
