--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="main-header"> 
-		<a class="header-logo" href="index.html">DEVICE</a>                       
+		<a class="header-logo" href="index.html"><img src="img/logo-header.png"></a>                       
 		
 		<nav class="main-navigation">
 		<div class="user-navigation-header">                
@@ -121,7 +121,7 @@
 				<input id="bluetooth-no" type="radio" name="is-bluetooth" value="false">
 				<label for="bluetooth-no">Нет</label>
 				
-				<input type="image" src="/img/show-more.png" alt="ПОКАЗАТЬ">
+				<input type="image" src="/img/show-more.png" alt="показать">
 			</section>		
 		</section>
 		
@@ -179,8 +179,8 @@
 		
 		<nav class="products-list-navigation">
 			
-			<button>НАЗАД</button>
-			<button>ВПЕРЕД</button>
+			<button>назад</button>
+			<button>вперед</button>
 			
 			<ul class="products-list-pages">   <!-- пока еще не уверен как будут взаимодействовать нумерация страниц и наполнение формы с продуктами -->
 				<li class="active">1</li>		<!-- напрашивается сделать кнопки с js, но пока не умею, и непонятно что с навигацией - ссылки определенно бредовое решение -->	
@@ -192,9 +192,8 @@
 	</main>	
 	
 	<footer class="main-footer">
-		<a class="header-logo" href="index.html">
-          <img src="img/index-logo.svg" width="10" height="10" alt="DEVICE">
-        </a> 
+		<a class="footer-logo" href="index.html"><img src="img/logo-footer.png"></a>  
+		
 		<p class="text-footer">г.Москва ул. Строителей, 15</p>
 		<p class="text-footer">Тел.: +7(495)495-95-95</p>
 		
@@ -209,9 +208,9 @@
 				<button id="shopping-cart-footer">Корзина</button>
 		
 			<ul id="service-navigation-footer">
-					<li><a href="#delivery.html">ДОСТАВКА</a></li>
-					<li><a href="#guarantee.html">ГАРАНТИЯ</a></li>
-					<li><a href="#credit.html">КРЕДИТ</a></li>
+					<li><a href="#delivery.html">Доставка</a></li>
+					<li><a href="#guarantee.html">Гарантия</a></li>
+					<li><a href="#credit.html">Кредит</a></li>
 			</ul>
 		</nav>
 		
