--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="main-header"> 
-		<a class="header-logo" href="index.html">DEVICE</a>                       
+		<a class="header-logo" href="index.html"><img src="img/logo-header.png"></a>                       
 		
 		<nav class="main-navigation">
 		<div class="user-navigation-header">                
@@ -55,7 +55,7 @@
 				<p><b>Делай селфи как Бен Стиллер!</b><p>
 				<p>Самая длинная палка для селфи ...</p>
 				
-				<input type="image" src="/img/read-more.png" alt="ПОДРОБНЕЕ">
+				<input type="image" src="/img/read-more.png" alt="подробнее">
 				<input type="radio" name="top-products-radio" value="selfi-stick1" checked>
 				<input type="radio" name="top-products-radio" value="2">
 				<input type="radio" name="top-products-radio" value="3">
@@ -121,9 +121,9 @@
 		
 		<section class="services">
 			<ul id="service-navigation">
-				<li class="active"><input type="image" src="/img/delivery.png" alt="ДОСТАВКА"></li>
-				<li><input type="image" src="/img/guarantee.png" alt="ГАРАНТИЯ"></li>
-				<li><input type="image" src="/img/сredit.png" alt="КРЕДИТ"></li>
+				<li class="active"><input type="image" src="/img/delivery.png" alt="Доставка"></li>
+				<li><input type="image" src="/img/guarantee.png" alt="Гарантия"></li>
+				<li><input type="image" src="/img/сredit.png" alt="Кредит"></li>
 			</ul>	
 				<div>
 					<h2>Доставка</h2>                              <!-- пока не знаю во что обернуть для динамики с .class:hover.. возможно lablel и там что-то помудрить, или в курсах дальнейших увижу -->
@@ -172,9 +172,8 @@
 	
 	
 	<footer class="main-footer">
-		<a class="header-logo" href="index.html">
-          <img src="img/index-logo.svg" width="10" height="10" alt="DEVICE">
-        </a> 
+		<a class="footer-logo" href="index.html"><img src="img/logo-footer.png"></a>  
+		
 		<p class="text-footer">г.Москва ул. Строителей, 15</p>
 		<p class="text-footer">Тел.: +7(495)495-95-95</p>
 		
@@ -189,9 +188,9 @@
 				<button id="shopping-cart-footer">Корзина</button>
 		
 			<ul id="service-navigation-footer">
-					<li><a href="#delivery.html">ДОСТАВКА</a></li>
-					<li><a href="#guarantee.html">ГАРАНТИЯ</a></li>
-					<li><a href="#credit.html">КРЕДИТ</a></li>
+					<li><a href="#delivery.html">Доставка</a></li>
+					<li><a href="#guarantee.html">Гарантия</a></li>
+					<li><a href="#credit.html">Кредит</a></li>
 			</ul>
 		</nav>
 		
