задание по доступности
задание по доступности

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				
 				<img src="img/map-min.png" alt="map">
 				
-				<input type="button" name="write-to-us" value="подробнее о нас">
+				<input type="button" name="write-to-us" value="напишите нам">
 			</div>
 		</section>
 	
