--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     	<header class="main-header">
 			<div class="catalog-header-background"></div>
 			<div class="grid"></div>
-			<a class="header-logo" href="index.html"><img src="img/logo-header.png"></a>
+			<a class="header-logo" href="index.html"><img src="img/logo-header.png" alt="Логотип Device"></a>
 
 			<nav class="main-navigation">
 				<div class="user-navigation">
@@ -214,7 +214,7 @@
 									<a class="product-compare" href="#">Добавить к сравнению</a>
 					            </div>
 								<a href="#">
-									<img src="img/products/selfie_stick444.png" alt="Селфи-палка &#34Следуй за мной&#34">
+									<img src="img/products/selfie_stick444.png" alt="Селфи-палка Следуй за мной">
 								</a>
 							</div>
 							<div class="products-list-description">
@@ -226,19 +226,15 @@
 					</section>
 			
 					<nav class="products-list-navigation">
-						<a class="previous-button" href="#">
-							<button>назад</button>
-						</a>			
-						<div class="list-pages">   
+						<a class="previous-button" href="#">назад</a>
+						<div class="list-pages">
 							<ul>
 								<li><a class="active-a" href="#">1</a></li>
 								<li><a href="#">2</a></li>
 								<li><a href="#">3</a></li>
 							</ul>
 						</div>
-						<a class="next-button" href="#">
-							<button>вперед</button>
-						</a>
+						<a class="next-button" href="#">вперед</a>
 					</nav>
 				</div>
 			</div>
@@ -249,7 +245,7 @@
 
 	<footer class="main-footer">
 		<div class="container">
-			<a class="footer-logo" href="index.html"><img src="img/logo-footer.png"></a>  
+			<a class="footer-logo" href="index.html"><img src="img/logo-footer.png" alt="Логотип Девайс"></a>
 			
 			<nav class="navigation-footer">                
 				<ul class="user-navigation">                
@@ -279,7 +275,7 @@
 					<a class="social-button" href="#"><img src="img/svg/twitter.svg" alt="twitter"></a>
 				</div>
 				
-				<a class="social-button" href="https://htmlacademy.ru" target="_blank"><img src="img/html-academy-logo.png"></a>
+				<a class="social-button" href="https://htmlacademy.ru" target="_blank"><img src="img/html-academy-logo.png" alt="Логотип html Academy"></a>
 			</div>
 		</div>
 	</footer>
