--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 					<input class="guarantee" id="guarantee" type="radio" name="services" value="Гарантия" hidden>
 					<input class="credit" id="credit" type="radio" name="services" value="Кредит" hidden>
 					<div class="label-wrapper">
-						<label for="delivery" class="button-wrapper wrapper-160">Доставка<div></div></label>
-						<label for="guarantee" class="button-wrapper wrapper-160">Гарантия<div></div></label>
-						<label for="credit" class="button-wrapper wrapper-160">Кредит<div></div></label>
+						<label for="delivery" class="button-wrapper wrapper-160">Доставка<span></span></label>
+						<label for="guarantee" class="button-wrapper wrapper-160">Гарантия<span></span></label>
+						<label for="credit" class="button-wrapper wrapper-160">Кредит<span></span></label>
 					</div>
 					<svg class="line2-svg" height="320" width="14">
 						<line x1="0" y1="0" x2="0" y2="320" style="stroke: black; stroke-width: 14" />
@@ -214,21 +214,21 @@
 						<div class="description">
 							<h2>Доставка</h2>
 							<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-							<img src="img/svg/delivery.svg" alt="Доставка" width="135px">
+							<img src="img/svg/delivery.svg" alt="Доставка">
 						</div>
 					</div>
 					<div class="description-hidden guarantee-hidden">
 						<div class="description">
 							<h2>Гарантия</h2>
 							<p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-							<img src="img/svg/warranty.svg" alt="Гарантия" width="135px">
+							<img src="img/svg/warranty.svg" alt="Гарантия">
 						</div>
 					</div>
 					<div class="description-hidden credit-hidden">
 						<div class="description">
 							<h2>Кредит</h2>
 							<p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
-							<img src="img/svg/credit.svg" alt="Кредит" width="135px">
+							<img src="img/svg/credit.svg" alt="Кредит">
 						</div>
 					</div>
 				</div>
@@ -291,7 +291,7 @@
 	
 	<footer class="main-footer">
 		<div class="container">
-			<a class="footer-logo" href="index.html"><img src="img/logo-footer.png"></a>  
+			<a class="footer-logo" href="index.html"><img src="img/logo-footer.png" alt="logo-footer"></a>
 			
 			<nav class="navigation-footer">                
 				<ul class="user-navigation">                
@@ -321,7 +321,7 @@
 					<a class="social-button" href="#"><img src="img/svg/twitter.svg" alt="twitter"></a>
 				</div>
 				
-				<a class="social-button" href="https://htmlacademy.ru" target="_blank"><img src="img/html-academy-logo.png"></a>
+				<a class="social-button" href="https://htmlacademy.ru" target="_blank"><img src="img/html-academy-logo.png" alt="html Academy logo"></a>
 			</div>
 		</div>
 	</footer>
