--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     	<header class="main-header"> 
 			<div class="header-background"></div>
 			<div class="grid"></div>
-			<a class="header-logo" href="index.html"><img src="img/logo-header.png"></a>         
+			<a class="header-logo" href="index.html"><img src="img/logo-header.png" alt="Логотип Device"></a>         
 			
 			<nav class="main-navigation">
 				<div class="user-navigation">                
